--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "aiconfig": "^1.1.15",
     "next": "15.3.2",
+    "openai": "^4.97.0",
     "pdf-parse": "^1.1.1",
     "pdf2json": "^3.1.5",
     "pdfjs-dist": "^5.2.133",
@@ -22,7 +24,7 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "eslint": "^9.26.0",
+    "eslint": "^8.57.1",
     "eslint-config-next": "15.3.2",
     "tailwindcss": "^4",
     "typescript": "^5"
