--- a/package.json
+++ b/package.json
@@ -21,16 +21,17 @@
     "@babel/core": "^7.27.1",
     "@babel/preset-env": "^7.27.2",
     "@eslint/eslintrc": "^3.3.1",
-    "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "autoprefixer": "^10.4.17",
     "babel-loader": "^10.0.0",
     "eslint": "^8.57.1",
     "eslint-config-next": "15.3.2",
     "handlebars": "^4.7.8",
     "handlebars-loader": "^1.7.3",
-    "tailwindcss": "^4",
+    "postcss": "^8.4.35",
+    "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
 }
