--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@types/js-yaml": "^4.0.9",
     "js-yaml": "^4.1.0",
+    "mammoth": "^1.9.0",
     "next": "15.3.2",
     "openai": "^4.97.0",
     "pdf2json": "^3.1.5",
