--- a/aiconfig.yaml
+++ b/aiconfig.yaml
@@ -4,7 +4,7 @@ schema_version: v1
 metadata:
   model: gpt-4.1-mini-2025-04-14
   temperature: 0.0
-  max_tokens: 1000000
+  max_tokens: 32000
   response_format: { type: "json_object" }
 
 prompts:
